# ParkingLotDetection

./: .gitignore  CMakeLists.txt  README.md
include/: bbox.h  carsegmentation.h  metrics.h  parkingdetection.h  utils.h  visualizationmap.h
include/dataobjects/: bbox.h
results/sequence0/2013-02-24_10_05_04/: aaa.txt
results/sequence0/2013-02-24_17_55_12/: metrics.txt
results/sequence1/2013-02-22_06_25_00/: metrics.txt
results/sequence1/2013-02-22_06_55_00/: metrics.txt
results/sequence1/2013-02-22_07_05_01/: metrics.txt
results/sequence1/2013-02-22_07_10_01/: metrics.txt
results/sequence1/2013-02-22_07_15_01/: metrics.txt
results/sequence2/2013-03-09_07_45_02/: metrics.txt
results/sequence2/2013-03-09_08_05_02/: metrics.txt
results/sequence2/2013-03-09_09_30_04/: metrics.txt
results/sequence2/2013-03-09_09_45_04/: metrics.txt
results/sequence2/2013-03-09_11_20_06/: metrics.txt
results/sequence3/2013-03-19_06_55_01/: metrics.txt
results/sequence3/2013-03-19_07_05_01/: metrics.txt
results/sequence3/2013-03-19_07_10_01/: metrics.txt
results/sequence3/2013-03-19_07_25_01/: metrics.txt
results/sequence4/2013-04-15_07_05_01/: metrics.txt
results/sequence4/2013-04-15_07_10_01/: metrics.txt
results/sequence4/2013-04-15_07_15_01/: metrics.txt
results/sequence4/2013-04-15_07_25_01/: metrics.txt
results/sequence4/2013-04-15_07_35_01/: metrics.txt
results/sequence5/2013-04-12_14_20_09/: metrics.txt
results/sequence5/2013-04-12_14_45_09/: metrics.txt
results/sequence5/2013-04-12_14_50_09/: metrics.txt
results/sequence5/2013-04-12_14_55_09/: metrics.txt
results/sequence5/2013-04-12_15_00_09/: metrics.txt
src/: bbox.cpp  carsegmentation.cpp  main.cpp  metrics.cpp  parkingdetection.cpp  utils.cpp  visualizationmap.cpp
src/dataobjects/: bbox.cpp
src/libs/: tinyxml2.cpp
